updating front slide

--- a/index.html
+++ b/index.html
@@ -36,13 +36,12 @@
                 <span class="title-bg">jQuery</span><br>
                 <span class="title-bg">for Beginners</span>
             </h1>
-            <!-- <h2><span>with</span> Instructor Name</h2>
-            <img class="instructor-img" src="framework/img/workshop/" alt="Your Name">
+            <h2><span>with</span> Kim Beaudin</h2>
+            <img class="instructor-img" src="framework/img/workshop/reggie.jpg" alt="Kim Beaudin">
             <ul>
-                <li><i class="fa fa-envelope"></i> <a href="">youremail@domain.com</li>
-                <li><i class="fa fa-desktop"></i> <a href="">your-site.com</a></li>
-                <li><i class="fa fa-twitter"></i> <a href="http://twitter.com/">@your-twitter</a></li>
-            </ul> -->
+                <li><i class="fa fa-envelope"></i> <a href="mailto:kimberlydb@gmail.com">kimberlydb@gmail.com</li>
+                <li><i class="fa fa-twitter"></i> <a href="http://twitter.com/kimbeaudin">@kimbeaudin</a></li>
+            </ul>
         </div>
     </header>
 
